fet : search bar added and working but the second page is not displaying

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-lazy-load-image-component": "^1.6.0",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
